# ScratchScript

./: .gitmodules  CMakeLists.txt  README.md
ImGUI/: CMakeLists.txt  CMakeOptions.cmake
ScratchScript/: CMakeLists.txt
ScratchScript/include/scr/: Costume.hpp  GL.hpp  Gui.hpp  Json.hpp  Project.hpp  ScratchScript.hpp  Script.hpp  Sprite.hpp  TextEditor.h  Window.hpp
ScratchScript/resources/shaders/: sprite.fsh  sprite.vsh
ScratchScript/resources/test/: project.json  script2.txt
ScratchScript/src/: buffer.cpp  costume.cpp  framebuffer.cpp  main.cpp  open.cpp  program.cpp  project.cpp  renderbuffer.cpp  show_properties.cpp  show_resources.cpp  show_sprites.cpp  show_viewport.cpp  sprite.cpp  stb_image.cpp  text_editor.cpp  texture.cpp  version.cpp  vertexarray.cpp  window.cpp
