cmake_minimum_required(VERSION 3.28)

project(ScratchScript)

set_property(GLOBAL PROPERTY CXX_STANDARD 20)

set(GLFW_BUILD_DOCS OFF)
set(GLFW_INSTALL OFF)
set(GLFW_LIBRARY_TYPE STATIC)
add_subdirectory(GLFW)

set(glew-cmake_BUILD_SHARED OFF)
set(glew-cmake_BUILD_STATIC ON)
set(ONLY_LIBS ON)
add_subdirectory(GLEW)

set(IMGUI_EXAMPLES OFF)
set(IMGUI_DEMO OFF)
set(IMGUI_DISABLE_OBSOLETE_FUNCTIONS OFF)
set(IMGUI_DISABLE_OBSOLETE_KEYIO OFF)
set(IMGUI_ENABLE_STDLIB_SUPPORT ON)
set(IMGUI_ENABLE_FREETYPE OFF)
set(IMGUI_IMPL_SDL OFF)
set(IMGUI_IMPL_METAL ${APPLE})
set(IMGUI_IMPL_OSX ${APPLE})
set(IMGUI_IMPL_WIN32 ${WIN32})
set(IMGUI_IMPL_GLFW ON)
set(IMGUI_IMPL_GLUT ON)
set(IMGUI_IMPL_OPENGL3 ON)
set(IMGUI_IMPL_OPENGL2 ${IMGUI_IMPL_OPENGL3})
set(IMGUI_IMPL_DX9 ${WIN32})
set(IMGUI_IMPL_DX10 ${WIN32})
set(IMGUI_IMPL_DX11 ${WIN32})
set(IMGUI_IMPL_DX12 ${WIN32})
set(IMGUI_IMPL_VULKAN ON)
add_subdirectory(ImGUI)

set(JSON_BuildTests OFF CACHE INTERNAL "")
add_subdirectory(JSON)

set(GLM_ENABLE_CXX_20 ON)
add_subdirectory(GLM)

add_subdirectory(ScratchScript)
